tomd: allow columns to be specified.